--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ body{
 
 .wrapper__container{
   max-width: 1600px;
+
   box-sizing:border-box;
   position: relative;
   display: grid;
@@ -81,13 +82,16 @@ body{
 
 
   .header{
+    max-width: 1600px;
+    grid-column: 1/-1;
+    grid-row: 1/3;
     position: fixed;
     margin: 0 auto;
     width: 100%;
   display: grid;
   grid-template-columns: repeat(18,1fr);
-  grid-template-rows: repeat(2,25px);
-  gap: 15px;
+  grid-template-rows: repeat(2,35px);
+/*   gap: 15px; */
   border:1px solid rgba(0,0,0,1);
   background-color:rgba(0,0,0,0.4);
   z-index: 500;
