--- a/css/style.css
+++ b/css/style.css
@@ -57,18 +57,18 @@ body{
   flex-direction: column;
   align-items:center;
   margin: 0 auto;
+ /*  background-color:rgba(0,0,0,0.6); */
 }
 
 .wrapper__container{
   max-width: 1600px;
-
   box-sizing:border-box;
   position: relative;
   display: grid;
   grid-template-columns: repeat(18,1fr);
   grid-template-rows: repeat(50,25px);
   gap: 15px;
-  background-color:rgba(255,255,255,1);
+/*   background-color:rgb(188, 240, 255); */
 }
 
 
@@ -90,8 +90,8 @@ body{
     width: 100%;
   display: grid;
   grid-template-columns: repeat(18,1fr);
-  grid-template-rows: repeat(2,35px);
-/*   gap: 15px; */
+  grid-template-rows: repeat(2,36px);
+  column-gap: 15px;
   border:1px solid rgba(0,0,0,1);
   background-color:rgba(0,0,0,0.4);
   z-index: 500;
@@ -104,7 +104,7 @@ body{
   grid-column: 2/3;
   grid-row: 1/3;
   padding: 2px;
-  border:1px solid rgba(0,0,0,0.2);
+  border:1px solid rgba(0,0,0,1);
 }
 img.header__logo__icon {
   max-width: 1fr;
@@ -119,7 +119,7 @@ img.header__logo__icon {
 .header__title{
   grid-column: 3/8;
   grid-row: 1/3;  
-  border:1px solid rgba(0,0,0,0.1);
+  border:1px solid rgba(0,0,0,1);
 
 }
 .header__title__content{
@@ -137,6 +137,9 @@ img.header__logo__icon {
 .title__link {
   color:rgba(255,255,255,1);
   font-family: "Open sans";
+
+  letter-spacing: 15px;
+  font-weight: 700;
   flex: 1 1 100%;
   letter-spacing: 2px;
   text-decoration: none;
@@ -153,18 +156,19 @@ img.header__logo__icon {
 /* header-nav */
 
 .nav {
-  grid-column: 13/-2;
+  grid-column: 8/13;
   grid-row: 1/3;
+  border:1px solid rgba(0,0,0,1);
 }
 
-.nav__menu {
+nav.nav{
+  border:1px solid rgba(0,0,0,1);
+}
+
+.nav__content {
   height: 65px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items:center;
   justify-content: center;
   padding: 10px;
-
 }
 .nav__menu__item {
   margin: 0 3px;
@@ -179,9 +183,9 @@ img.header__logo__icon {
 /* header-form*/
 
 .header__login__form {
-  grid-column: 8/13;
+  grid-column: 13/-2;
   grid-row: 1/3;
-  border:1px solid rgba(0,0,0,0.2);
+  border:1px solid rgba(0,0,0,1);
 }
 .header__client__log__content{
 align-items:center;
@@ -208,11 +212,11 @@ justify-content: space-around;
 }
 .btn {
   font-size: 0.7em;
-  border-radius:10px/10px;
+  border-radius:20px/20px;
   text-decoration: none;
   text-transform: uppercase;
   color:rgba(255,255,255,1);
-  background-color:rgba(231, 161, 125, 1);
+  background-color:rgb(253, 251, 130);
 }
 .submit__btn {
   padding: 7px;
@@ -348,6 +352,7 @@ section{
 .find__travel__background{
   grid-column: 1/-1;
   grid-row: 1/19;
+  border:1px solid rgba(0,0,0,0.2);
   top: 0;
   left: 0;
   position: relative;
@@ -381,12 +386,14 @@ section{
 
 .find__travel {
   grid-column: 1/-1;
-  grid-row: 1/19;
+  grid-row: 3/22;
+  border:1px solid rgba(0,0,0,0.2);
   transition: all ease-in-out 1s;
 }
 .find__travel__content {
   color:rgba(255,255,255,1);
   height: 100%;
+  border:1px solid rgba(0,0,0,0.2);
 }
 .find__travel__title__box {
  padding: 50px;
@@ -398,16 +405,18 @@ section{
   text-align: center;
   letter-spacing: 2px;
   margin:  0 auto 15% auto;
+  border:1px solid rgba(0,0,0,0.2);
 }
 .find__travel__title{
   flex: 0 0 100%;
   position: relative;
   font-size:6em;
   font-weight: 900;
-  text-shadow:0 1px  1px rgba(0,0,0,1);
+  text-shadow:0 1px  1px rgba(0,0,0,0.2);
   padding: 20px;
   letter-spacing: 8px;
   text-transform: uppercase;
+  border:1px solid rgba(0,0,0,0.2);
 }
 
 /* .find__travel__title::after,
@@ -433,10 +442,11 @@ section{
 .find__travel__subtitle{
   font-weight: 900;
   text-transform: uppercase;
-  flex: 0 0 100%;
+  flex: 1 1 auto;
  letter-spacing: 8px;
   font-size:1em;
   padding-top: 50px;
+  border:1px solid rgba(0,0,0,0.2);
 }
 .find__travel__slogan {
   font-weight: 900;
@@ -447,11 +457,12 @@ section{
   letter-spacing: 8px;
   text-align: center;
   padding: 80px 50px;
+  border:1px solid rgba(0,0,0,0.2);
   padding-bottom: 0;
 }
 .find__travel__link{
   flex: 1 1 auto;
-  max-width: 30%;
+  max-width: 20%;
   text-align: center;
   font-weight: 900;
   margin: 15% auto;
