--- a/css/style.css
+++ b/css/style.css
@@ -41,12 +41,10 @@ body{
     line-height: 1;
 }
 body{
- 
   font-size: 14px;
-  /* color: rgba(255, 255, 255, 1); */
 }
 
-
+/* wrapper */
 
 .wrapper{
   position: relative;
@@ -64,19 +62,12 @@ body{
   position: relative;
   display: grid;
   grid-template-columns: repeat(18,1fr);
-  grid-template-rows: repeat(50,25px);
-  gap: 15px;
+  grid-template-rows: repeat(100,20px);
+  gap: 10px;
 }
 
 
-
-/* [class*="__content"]{
-  display: flex;
-  flex-wrap: wrap;
-  align-items:center;
-  margin: 0 auto;
-} */
-
+/* header */
 
   .header{
     width:100%;
@@ -90,71 +81,89 @@ body{
   background-color:rgba(0,0,0,0.4);
   z-index: 500;
   color:rgba(255,255,255,1);
+  transition: transform 0.7s ease-in-out;
+}
+.header.top__slide{
+  transform: translateY(-400px);
 }
 
+
+.header__half{
+  grid-column: 1/10;
+  grid-row: 1/3;
+  padding-left: 10px;
+  display: flex;
+  justify-content:space-between;
+  align-items:center;
+  transform: translateX(-400%);
+  transition: transform 0.7s ease-in-out;
+}
+.header__half:nth-of-type(even){
+  grid-column: 10/19;
+  padding-left: 0;
+  padding-right: 10px;
+  transform: translateX(400%);
+}
+.header__half.shown{
+  transform: translatex(0);
+}
+.shown{
+  transform: translatex(0);
+}
 /* header-logo */
 
 .header__logo {
-  grid-column: 2/3;
-  grid-row: 1/3;
+  flex: 1 1 20%;
   padding: 4px;
   margin: 0 auto;
   text-align: center;
-  border:1px solid rgba(0,0,0,1);
 }
 img.header__logo__icon {
   max-width: 70px;
   height: 70px;
-  border:1px solid rgba(0,0,0,1);
-  
 }
 
 /* header-title */
 
 
 .header__title{
-  grid-column: 3/8;
-  grid-row: 1/3;  
-  border:1px solid rgba(0,0,0,1);
+  flex: 1 1 70%;
   color:rgba(255,255,255,1);
   padding: 5px;
   display: flex;
   justify-content:center;
   flex-wrap: wrap;
-  align-items:center
+  align-items:center;
+  margin: 0 auto;
+  text-align: center;
+  height: 80px;
 }
 
 .title {
   font-size: 2em;
   font-family: "Open sans";
-  letter-spacing: 15px;
-  font-weight: 400;
-  flex: 1 1 100%;
-  letter-spacing: 2px;
+  letter-spacing: 10px;
+  font-weight: 700;
+  flex: 0 1 100%;
   text-decoration: none;
   text-transform: uppercase;
-  text-align: center;
 }
 .header__subtitle {
-  font-family: "Open Sauce";
-  font-size: 1.6em;
-  text-align: center;
-  
+  font-family: "Open Sans";
+  font-size: 1.4em;
 }
 
 
 /* header-nav */
 
 .header__nav {
-  grid-column: 13/18;
-  grid-row: 1/3;
-  border:1px solid rgba(0,0,0,1);
-  padding: 10px;
+  flex: 1 1 70%;
+  padding: 5px;
 }
 
 
 .nav__menu{
-  height: 60px;
+  height: 70px;
   display: flex;
   align-items:center;
   justify-content: flex-end;
@@ -164,18 +173,26 @@ img.header__logo__icon {
   margin: 0 3px;
   padding: 2px;
 }
+.nav__menu__item:hover {
+  border-bottom: 2px solid rgba(255,255,255,0.7);
+}
 .nav__menu__link {
   text-transform: uppercase;
   text-decoration: none;
+  font-weight: 600;
   color:rgba(255,255,255,1);
+}
+
+.active{
+
+  color:rgba(255,255,255,1);
+  border-bottom: 2px solid rgba(241, 43, 8, 0.699);
 }
 
 /* header-form*/
 
 .header__login__form {
-  grid-column: 10/13;
-  grid-row: 1/3;
-  border:1px solid rgba(0,0,0,1);
+  flex: 1 1 30%;
   text-align: center;
 }
 .header__client__log__content{
@@ -196,21 +213,23 @@ justify-content: space-around;
 }
 .email,
 .password {
-  font-size:0.8em;
+  font-size:0.6em;
 }
 .header__client__log__content label{
 
 }
 .btn {
-  font-size: 0.7em;
+  font-size: 0.6em;
   letter-spacing: 1px;
   text-decoration: none;
   text-transform: uppercase;
   color:rgba(0,0,0,1);
-  border:2px solid rgba(0,0,0,1);
+  border:2px solid rgba(241, 43, 8, 0.699);
   border-radius:7px/7px;
-  padding: 5px;
+  padding: 3px;
   text-align: center;
+  margin: 0 auto;
+  vertical-align: middle;
 }
 
 
@@ -317,20 +336,33 @@ font-size: 0.9em;
 } 
 
 /*______________________________________________*/
-
-
-
-
-
-
-
-.breadcrumbs{
-  grid-column: 4/-4;
-  grid-row: 3/3;
-  border:1px solid rgba(0,0,0,0.2);
+.list__title{
+  flex: 1 1 100%;
+  padding: 10px;
+  text-align: center;
+  text-transform: uppercase;
+}
+.item__title{
+  font-size: 2em;
+  text-align: center;
+  padding: 20px;
 }
 
-.breadcrumbs__content {
+
+
+
+.main{
+  grid-column: 1/19;
+  grid-row: auto;
+}
+.main__content{
+  width: 100%;
+  box-sizing:border-box;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(18,1fr);
+  grid-template-rows: repeat(100,20px);
+  gap: 10px;
 }
 
 
@@ -339,11 +371,21 @@ font-size: 0.9em;
 section{
   position: relative;
   z-index: 100;
+transform: translateX(400%);
+transition: transform 0.5s ease;
+}
+
+.section:nth-of-type(even){
+transform: translateX(-400%);
+}
+
+.section.shown{
+transform: translateX(0);
 }
 
 .find__travel__background{
   grid-column: 1/-1;
-  grid-row: 1/24;
+  grid-row: 1/30;
   border:1px solid rgba(0,0,0,0.2);
   top: 0;
   left: 0;
@@ -357,12 +399,12 @@ section{
 
 .find__travel {
   grid-column: 1/-1;
-  grid-row: 1/24;
+  grid-row: 1/30;
   transition: all ease-in-out 0.3s;
   display: grid;
   grid-template-columns: repeat(18,1fr);
-  grid-template-rows: repeat(24,25px);
-  gap: 15px;
+  grid-template-rows: repeat(24,20px);
+  gap: 10px;
   color:rgba(255,255,255,1);
 }
 
@@ -400,8 +442,12 @@ section{
 
 
 .find__travel .btn {
-  grid-column:8/12 ;
-  grid-row:17/18 ;
+  grid-column:7/13 ;
+  grid-row:18/20 ;
+  color:rgba(255,255,255,1);
+  font-size: 2em;
+  font-weight: 800;
+  padding-top: 10px;
 }
 
 
@@ -433,184 +479,171 @@ section{
 
 
 .achievments {
-  grid-column: 5/-5;
-  grid-row:24/30;
+  grid-column: 4/-4;
+  grid-row:32/42;
   border:1px solid rgba(0,0,0,0.2);
   background-color:rgba(255,255,255,0.2);
 }
-.achievments__content {
-}
+
 .achievments__list {
+  display: flex;
+  align-items:center;
+  flex-wrap: wrap;
 }
-.achievments__item {
+.achievment__title{
+  font-size: 1em;
+}
+
+.achievment {
+  flex: 1 1 auto;
+  max-width: 19%;
+  align-items:center;
+  justify-content: center;
+  text-align: center;
+  margin: 20px 3%;
+  padding: 10px;
+  border:1px solid rgba(0,0,0,0.2);
 }
 .achievments__image {
+  border:1px solid rgba(0,0,0,0.2);
+}
+.achievments__list__title{
+
 }
 
 
-.section {
+
+
+/*PC*/
+@media (max-width:1470px){
+  
 }
+@media (max-width:1087px){
+  
+}
+/*tablet*/
+ @media (max-width:991.98px){
+  .achievment {
+    flex: 1 1 auto;
+    max-width: 50%;
+    align-items:center;
+    justify-content: center;
+    text-align: center;
+    margin: 20px 5%;
+    padding: 10px;
+    border:1px solid rgba(0,0,0,0.2);
+  }
+  
+}
+/*mobile*/
+@media (max-width:767.98px){
+  
+}
+/*mobile__small*/
+@media(max-width:479.98px){
+ 
+}
+
+/*________________________________________________*/
+
 .travel__ways {
   grid-column: 1/-1;
-  grid-row: 30/40;
+  grid-row: 44/56;
   border:1px solid rgba(0,0,0,0.2);
   background-color:rgba(0,0,0,0.2);
 }
 .travel__ways__content {
 }
 .travel__ways__list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items:center;
+  gap: 20px;
+}
+.travel__way__title{
+
+
 }
 .travel__way__item {
+  flex: 0 1 30%;
+  border:1px solid rgba(0,0,0,0.2);
+  background-color:rgba(255,255,255,1);
+  height: 450px;
+  transform: translateY(-50px);
 }
 .travel__way {
 }
 .travel__way__descr {
-}
-.travel__way__title {
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*______________________________________________*/
-/* [class*="__container"]{
-  max-width: 1470px;
-  margin: 0 auto;
-  padding: 10px;
-} */
-/* 
-@media (max-width:1470px){
-  [class*="__container"]{
-      max-width: 1300px;
-  }
-}
-@media (max-width:1087px){
-  [class*="__container"]{
-      max-width: 970px;
-  }
+  font-size: 1.6em;
+  padding: 20px;
+  line-height: 1.5;
+  background-color: rgba(255,255,255,1);
 }
 
- @media (max-width:991.98px){
-
-  [class*="__container"]{
-      max-width: 750px;
-  }
+/*________________________________________________*/
+.booking__steps {
+  grid-column: 1/-1;
+  grid-row: 58/76;
+  border:1px solid rgba(0,0,0,0.2);
+  background-color:rgba(0,0,0,0.2);
 }
-
-@media (max-width:767.98px){
-  [class*="__container"]{
-    max-width: 700px;
-  }
-}
-
-@media(max-width:479.98px){
-  [class*="__container"]{
-    max-width: none;
-}
-}  */
-
-/*______________________________________________*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-
-
-.header {
-  position: fixed;
-  width: 100%;
-  top: 5px;
-  left: 0;
-  z-index: 50;
-  
-  padding: 0 20px;
-}
-
-.header__container {
-    background-color: rgba(0, 0, 0, 0.8);
+.booking__steps__list {
   display: flex;
-  max-height: 80px;
-  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items:center;
+  gap: 20px;
+}
+.booking__step {
+  flex: 0 1 30%;
+  border:1px solid rgba(0,0,0,0.2);
+  background-color:rgba(255,255,255,1);
+  min-height: 250px;
   text-align: center;
-  text-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
-  gap: 25px;
+}
+.booking__step__title {
+ 
+}
+.booking__step__descr {
+  font-size: 1.6em;
+  padding: 20px;
+  line-height: 1.5;
+  background-color: rgba(255,255,255,1);
 }
 
-.header__logo {
-  flex: 0 0 70px;
-  z-index: 5;
+.booking__step .btn{
+  font-size: 1.5em;
 }
 
-.header__logo__icon{
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  border-radius:50%
+
+
+
+
+
+
+
+.hide {
+  display: none;
 }
 
-.header__title {
-  flex: 1 1 20%;
-  font-weight: 600;
-  letter-spacing: 2px;
-  font-size: 1.8em;
-  text-align: center;
-  color: rgba(255, 255, 255, 1);
-  font-family: 'Tenor Sans', sans-serif;
-  text-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
-}
-.header__subtitle {
-  text-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
-  font-weight: 500;
-  font-size: 0.7em;
-  
+.show {
+  display:grid;
 }
 
-.header__nav {
-  flex: 1 1 30%;
-  display: flex;
-  
-} */
+.fade {
+  animation-name: fade;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-fill-mode: both;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
