--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body{
     z-index: 1000;
     background-color:rgba(0,0,0,0.5);
     transition: transform 0.7s ease-in-out;
-    margin: 0 ;
+    margin: 0 auto;
 }
 .header.top__slide{
     transform: translateY(-400px);
@@ -217,35 +217,59 @@ input[type="submit"] {
 /*______________________________________________*/
 
 .main.row{
-  
     position: relative;
     overflow: hidden;
     width: 100%;
     margin: 0;
     padding: 0;
-    padding-top: 100px;
 }
 
-
+.main__content{
+    z-index: 900;
+   /*  background-color:rgba(255,255,255,0.3); */
+   
+}
 
 
 .find__travel.container-fluid {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+    align-items:center;
     margin: 0 ;
     padding: 0;
+    padding-top: 150px;
     text-align: center;
-    width: 100%;
-    height: 55vw;
     border:1px solid rgba(0,0,0,0.2);
-
 }
-.find__travel__title {
+.find__travel{
+     width: 100%;
+     color:rgba(255,255,255,1);
+}
+
+.find__travel__title span{
+    
+    font-size: 2em;
+    letter-spacing: 7px;
+    text-shadow: 3px 0 3px rgba(0,0,0,1);
+}
+
+
+.find__travel__title p{
+    font-size: 4em;
+    letter-spacing: 1px;
+    text-shadow: 3px 0 3px rgba(0,0,0,1);
 }
 .find__travel__slogan {
+    font-size: 3em;
+    text-shadow: 3px 0 3px rgba(0,0,0,1);
+    letter-spacing: 1px;
+    padding: 30px 0px;
 }
 .find__travel .btn {
     font-size: 1.5em;
     margin: 10px auto;
+    color:rgba(255,255,255,1);
     border:5px solid rgba(255, 88, 11,1);
     border-radius: 15px/15px;
     box-shadow:0 0 10px rgba(0,0,0,0.5);
@@ -349,8 +373,10 @@ img.achievments__image {
 /*______________________________________________*/
 
 .tour__card.container-fluid{
-    margin: 0;
-    padding: 0;
+    margin:50px 0;
+    padding:50px 0;
+    box-shadow:0 0 10px rgba(0,0,0,0.5);
+
 }
 
 /*______________________________________________*/
@@ -389,7 +415,7 @@ img.achievments__image {
     text-align: center;
     padding: 15px;
     letter-spacing: 2px;
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgba(0,0,0,0.2);
 }
 
 /*________________________________________________*/
@@ -417,6 +443,7 @@ letter-spacing: 5px;}
     font-size: 0.8em;
 }
 .route {
+    
  
 }
 .route__list,
@@ -426,7 +453,7 @@ letter-spacing: 5px;}
     align-items:center;
     flex-wrap: wrap;
     flex-direction: row;
-    margin: 0 20%;
+    margin: 100px 20% 0 20%;
     max-width: 60%;
 }
 .route__point__title {
